--- a/wp-content/themes/Planty/style.css
+++ b/wp-content/themes/Planty/style.css
@@ -78,6 +78,19 @@ header {
 	
 }
 
+.left-leaf{
+	top: unset !important;
+	bottom:80px !important;
+	left:33.5% !important;
+	transform: translateX(-33.5%);
+}
+.right-leaf{
+	top: unset !important;
+	bottom:80px !important;
+	left:66% !important;
+	transform: translateX(-66%);
+}
+
 footer{
 	text-align:center;
 	margin-bottom :30px;
@@ -95,7 +108,7 @@ footer a {
     height: 55px !important;
 }
 
-.forminator-field:has(.btn-submit-contact) 
+.forminator-field:has(.btn-submit-contact), .forminator-field:has(.btn-submit-order)
 {
 	text-align:center;
 }
@@ -106,11 +119,78 @@ footer a {
 
 input[type=text], input[type=email] {
 	height:71px !important;
+	
+}
+
+/* Formulaire de commande*/
+
+input[type=number]{
+	width:39px !important;
+	height:56px !important;
+	text-align:center !important;
+	font-family: Inter !important ;
+	border-radius: 0px !important;
+}
+
+.forminator-repeater-label{
+	font-size:30px !important;
+}
+
+.order-title h2 {
+	font-weight:700 !important;
+	margin: 20px 0 !important;
+}
+
+.separator-horizontal {
+	margin:20px 0  30px !important;
+}
+
+.btn-submit-order{
+	border-radius: 5px !important;
+	width: 198px !important;
+    height: 55px !important;
+	margin-top:40px !important;
 }
 
 
+/* Pour Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Pour Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.input-number, .product-picture {
+	display:flex;
+	justify-content:center;
+}
+
+.form-column-information{
+	padding-right:40px !important;
+	border-right:1px solid #ffffff;
+	
+}
+.form-column-information > label, .form-column-shipping > label{
+	line-height:1em !important;
+	margin-bottom: 20px !important;
+	font-weight:700 !important;
+}
+.form-column-shipping{
+	padding-left:40px !important;
+	
+}
+
+.forminator-label{
+	font-weight: 400 !important;
+}
+
 /* Media Queries */
-/* Tablettes */
+/* small desktop */
 @media (max-width : 1440px) {
 	
 header {
@@ -124,7 +204,7 @@ header {
 	
 
 
-/* Petites tablettes et grands téléphones */
+/* tablettes et grands téléphones */
 @media (max-width: 1024px) {
     header {
         flex-direction: column;
@@ -159,10 +239,31 @@ header {
     }
 	
 	.admin-link a {
-	margin-right:0;
-}
+		margin-right:0;
+	}
+
+	.left-leaf{
+		left:20% !important;
+		transform: translateX(-20%);
+	}
+	.right-leaf{
+		left:78% !important;
+		transform: translateX(-78%);
+	}
 }
 
+/* tablette*/
+@media (max-width :782px){
+	
+.form-column-information{
+	padding-right:0 !important;
+	border-right:none;
+	
+}
+.form-column-shipping{
+	padding-left:0 !important;
+}
+}
 /* Petits téléphones */
 @media (max-width: 480px) {
    
