fix leaf CSS nous rencontrer

--- a/wp-content/themes/Planty/style.css
+++ b/wp-content/themes/Planty/style.css
@@ -195,11 +195,11 @@ input[type=number] {
 /* small desktop */
 @media (max-width : 1440px) {
 	
-header {
+    header {
 		width:100%;
 	}
 	
-	.leaf-team, .leaf-contact {
+	.leaf-contact {
 		display:none;
 	}
 }
